fix: update CSS styles for improved layout and spacing

--- a/src/components/Acerca/Image/Image.css
+++ b/src/components/Acerca/Image/Image.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  border: 2px solid white;
 }
 
 @media (max-width: 768px) {
