--- a/src/components/Sponsors/CardSponsor/CardSponsor.css
+++ b/src/components/Sponsors/CardSponsor/CardSponsor.css
@@ -36,6 +36,8 @@
   transform: translate(-50%, -50%);
   top: 95%;
   left: 50%;
+  rigth: 50%;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 768px) {
